@@ -1,1 +1,13 @@
+VM Arguements: --module-path "PATH\TO\javafx-sdk-18\lib" --add-modules javafx.controls,javafx.fxml
+*replace PATH\TO with actual path to javafx sdk lib folder containing jars
 
+Example: On Campus School Computers
+--module-path "C:\eclipse\javafx-sdk-18\lib" --add-modules javafx.controls,javafx.fxml
+
+Set git config credentials:
+git config --global user.email "email"
+git config --global user.name "name"
+
+Example: Trinidad's
+git config --global user.email "trinidena@outlook.com"
+git config --global user.name "Trinidena"
